# yt-transcriber-streamlit

./: Dockerfile  app.py  pocketscript.py  pyproject.toml  requirements.txt  setup.sh
